Haciendo cambios img del hero-image

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <header class="header">
       <section class="container">
         <div class="logo">
-          <a href="#">ZARATE</a>
+          <a href="#">/ZARATE/</a>
         </div>
         <button class="menu-btn">
           <svg
@@ -92,7 +92,7 @@
       <article
         class="hero-image"
         style="
-          --hero-image: url('assets/fondobaner.jpg');
+          --hero-image: url('assets/fondoportafolio.jpg');
           --hero-attachment: fixed;
         "
       >
@@ -120,7 +120,7 @@
           <h5>Programador web</h5>
         </aside>
         <p>
-          Comencé en el mundo del desarrollo web en el 2018 tanto en el FRONTEND
+          Profesional amante de la tecnología y el desarrollo tanto del FRONTEND
           y BACKEND, la programación es algo que cambio mi vida. Como
           desarrollador soy proactivo y organizado, con buenas relaciones
           interpersonales.
@@ -134,7 +134,7 @@
         <div class="text-center text-lg-left">
           <a
             class="btn"
-            href="https://drive.google.com/file/d/1h6L16P0F5fD7Q7BPKzlN63OxF-hgKJ2V/view?usp=sharing"
+            href="https://drive.google.com/file/d/1ly5DAUTd4-IfMGmJdDtlBEb2aSE688bX/view?usp=share_link"
             target="_blank"
             rel="noopener"
             >DESCARGAR CV</a
@@ -308,12 +308,7 @@
           <aside class="portfolio-card-info">
             <div>
               <h3>Proyecto 3</h3>
-              <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Rerum
-                repudiandae, quam explicabo neque repellat, amet repellendus
-                error vitae ipsam provident accusamus officiis unde ea labore
-                nobis fugiat ut magni expedita.
-              </p>
+              <p></p>
             </div>
           </aside>
         </a>
